@@ -25,7 +25,7 @@ typedef struct {
 	DBOP *dbop;
 } ASSOC;
 
-ASSOC *assoc_open(int);
+ASSOC *assoc_open(void);
 void assoc_close(ASSOC *);
 void assoc_put(ASSOC *, const char *, const char *);
 const char *assoc_get(ASSOC *, const char *);
